recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:5: error: not found: value isMember
  if (!isMember(l,v)) {
       ^Occurrences:8: error: not found: value occurences
    return 1+occurences(l.tail,v)
             ^